--- a/packages/SettingsLib/res/values/strings.xml
+++ b/packages/SettingsLib/res/values/strings.xml
@@ -681,9 +681,9 @@
     <string name="runningservices_settings_summary">View and control currently running services</string>
 
     <!-- Developer settings: enable WebView multiprocess name [CHAR LIMIT=50] -->
-    <string name="enable_webview_multiprocess">Enable multiprocess WebView</string>
+    <string name="enable_webview_multiprocess">Multiprocess WebView</string>
     <!-- Developer settings: enable WebView multiprocess summary [CHAR LIMIT=60] -->
-    <string name="enable_webview_multiprocess_desc">Run WebView renderers in an isolated process.</string>
+    <string name="enable_webview_multiprocess_desc">Run WebView renderers separately</string>
 
     <!-- Developer settings: select WebView provider title [CHAR LIMIT=30] -->
     <string name="select_webview_provider_title">WebView implementation</string>
