--- a/packages/PrintSpooler/res/values/strings.xml
+++ b/packages/PrintSpooler/res/values/strings.xml
@@ -150,6 +150,9 @@
     <!-- Description of printer info icon. [CHAR LIMIT=50] -->
     <string name="printer_info_desc">More information about this printer</string>
 
+    <!-- Notification that we could not create a file name for the printed PDF. [CHAR LIMIT=50] -->
+    <string name="could_not_create_file">Could not create file</string>
+
     <!-- Notification that print services as disabled. [CHAR LIMIT=50] -->
     <string name="print_services_disabled_toast">Some print services are disabled</string>
 
